--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,9 @@ spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
-spring.datasource.username=postgres
-spring.datasource.password=env
-
+spring.datasource.url=DATASOURCE_URL
+spring.datasource.username=DB_USERNAME
+spring.datasource.password=DB_PW
+#jdbc:postgresql://localhost:5433/postgres
 #drop n create table again, good for testing, comment this in production
 #spring.jpa.hibernate.ddl-auto=create
