--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,3 +22,14 @@ jobs:
         java-version: 13
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - name: Codecov
+
+      uses: codecov/codecov-action@v1.1.1
+      with:
+        # User defined upload name. Visible in Codecov UI
+        name: Lingo Project
+        # Repository upload token - get it from codecov.io. Required only for private repositories
+        token: fef694a8-6643-45c7-82ed-50adda621549
+        # Path to coverage file to upload
+        file: /codecov# optional
+        # Comma-separated list of files to upload
