--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
 
     <properties>
         <java.version>13</java.version>
+        <sonar.projectKey>Rubenoo_LingoProject</sonar.projectKey>
+        <sonar.organization>rubenoo</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
 
     <dependencies>
